# luna-bench

./: .coveragerc  .env.dev  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  THIRD_PARTY_LICENSES.md  example.env.dev  feat_a.py  luna_bench.db  pyproject.toml  pytest.ini  ruff.toml  tox.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.yml  something-else.md  task.yml
.github/workflows/: lint-template.yml  main-ci.yml  pr_code_analysis.yml  release-prep.yml  release.yml  release_prepare.yml  release_publish.yml  tag-release.yml  tagged-release.yml  test-template.yml
docs/: database.md  high-level-architecture.md
luna-bench-wheel/: luna_bench-0.0.1a1-py3-none-any.whl
luna_bench/: __init__.py  algorithms.py  benchmark.py  features.py  main.py  metrics.py  model_metadata.py  model_set.py  plots.py  types.py
luna_bench/_internal/: __init__.py  job_status.py
luna_bench/algorithms/: fake_algorithm.py  scip.py
luna_bench/base_components/: __init__.py  base_algorithm_async.py  base_algorithm_sync.py  base_feature.py  base_metric.py  base_plot.py
luna_bench/components/: __init__.py  algorithm.py  benchmark.py  enums.py  feature.py  job.py  metric.py  model_metadata.py  model_metric.py  model_set.py  pipeline.py  plot.py
luna_bench/configs/: config.py
luna_bench/custom/: __init__.py  registry_info.py  types.py
luna_bench/entities/: __init__.py  algorithm_entity.py  algorithm_result_entity.py  benchmark_entity.py  feature_entity.py  feature_result_entity.py  metric_entity.py  metric_result_entity.py  model_metadata_entity.py  model_set_entity.py  plot_entity.py
luna_bench/errors/: base_error.py  incompatible_class_error.py  infeasible_model_error.py  invalid_worker_type_error.py  missing_optional_dependency_error.py  model_decoding_error.py  model_name_already_used_error.py  unknown_error.py  write_once_error.py
luna_bench/features/: __init__.py  enum_feature_result.py  fake_feature.py  optsol_feature.py  var_num_feature.py
luna_bench/helpers/: __init__.py  decorators.py  degree.py  divider_helper.py  model_matrix_extraction.py  numpy_stats_helper.py  optional_dependencies.py  registry_info.py  var_scope.py
luna_bench/metrics/: __init__.py  approximation_ratio.py  best_solution_found.py  best_solution_found_ratio.py  fake_metric.py  feasbility_ratio.py  fraction_of_overall_best_solution.py  runtime.py  time_to_solution.py
luna_bench/plots/: __init__.py  fake_plot.py
scripts/: run-tests-with-coverage-html.sh
tests/: __init__.py  conftest.py  test_dummy.py
tests/e2e/: test_model_name_is_unique.py  test_modelset_in_benchmark.py
tests/fixtures/: __init__.py  db_reset.py  failing_algorithm.py  failing_feature.py  failing_metric.py  overwrite_background_tasks.py
tests/unit/: test_dummy.py
(+533 files in other folders)
