[project]
name = "luna-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "dependency-injector>=4.48.2",
    "huey>=2.5.3",
    "luna-quantum>=1.0.8rc2",
    "peewee>=3.18.2",
    "pydantic-settings>=2.11.0",
    "returns[compatible-mypy]>=0.26.0",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "tox>=4.30.3",
    "types-peewee>=3.18.2",
]
